--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,11 @@
 {
     "require": {
         "guzzle/guzzle": "~3.1.1"
+    },
+    "autoload": {
+        "psr-0": {
+            "RFTeesHashtag": "src/"
+        }
     }
 }
 
