--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
-        "guzzle/guzzle": "~3.1.1"
+        "guzzle/guzzle": "~3.1.1",
+        "monolog/monolog": "1.6.*@dev"
     },
     "autoload": {
         "psr-0": {
